<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.healtdiary.app.ui.data.DataFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_data" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_entry"
            app:destination="@id/navigation_entry" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.healtdiary.app.ui.visual.VisualFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_visual" />

    <fragment
        android:id="@+id/navigation_entry"
        android:name="com.healtdiary.app.ui.entry.EntryFragment"
        android:label="@string/title_new_entry"
        tools:layout="@layout/fragment_entry" >
        <action
            android:id="@+id/action_navigation_entry_to_navigation_home"
            app:destination="@id/navigation_home" />
        <argument
            android:name="entry"
            app:argType="com.healtdiary.app.data.Data"
            app:nullable="true" />
    </fragment>

</navigation>