<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.healtdiary.app.ui.data.DataViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewPerson"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewTopBackround"
            app:srcCompat="@drawable/ic_person" />

        <View
            android:id="@+id/viewPersonDivider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="@id/imageViewPerson"
            app:layout_constraintStart_toEndOf="@id/imageViewPerson"
            app:layout_constraintTop_toBottomOf="@+id/imageViewPerson" />

        <RadioGroup
            android:id="@+id/radioGroupGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/viewPersonDivider">

            <RadioButton
                android:id="@+id/radioButtonMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gender_option_1" />

            <RadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gender_option_2" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTextHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/layoutTextWeight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupGender"
            app:startIconContentDescription="@string/name_height"
            app:startIconDrawable="@drawable/ic_height">

            <EditText
                android:id="@+id/editTextHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:autofillHints="@string/name_height"
                android:hint="@string/name_height"
                android:inputType="number"
                tools:text="@string/height" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTextWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/layoutTextHeight"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupGender"
            app:startIconContentDescription="@string/name_height"
            app:startIconDrawable="@drawable/ic_weight">

            <EditText
                android:id="@+id/editTextWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:autofillHints="@string/name_weight"
                android:hint="@string/name_weight"
                android:inputType="number"
                tools:text="@string/weight" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imageViewBlood"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutTextHeight"
            app:srcCompat="@drawable/ic_blood" />

        <View
            android:id="@+id/viewBloodDivider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="@id/imageViewPerson"
            app:layout_constraintStart_toEndOf="@id/imageViewPerson"
            app:layout_constraintTop_toBottomOf="@+id/imageViewBlood" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTextSystol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/systol"
            app:layout_constraintEnd_toStartOf="@+id/layoutTextDiastol"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewBloodDivider"
            app:startIconContentDescription="@string/name_height"
            app:startIconDrawable="@drawable/ic_pressure">

            <EditText
                android:id="@+id/editTextSystol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:autofillHints="@string/name_bloodSystol"
                android:hint="@string/name_bloodSystol"
                android:inputType="number"
                tools:text="@string/bloodSystol" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTextDiastol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/diastol"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/layoutTextSystol"
            app:layout_constraintTop_toBottomOf="@+id/viewBloodDivider"
            app:startIconContentDescription="@string/name_height"
            app:startIconDrawable="@drawable/ic_pressure">

            <EditText
                android:id="@+id/editTextDiastol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:autofillHints="@string/name_bloodDiastol"
                android:hint="@string/name_bloodDiastol"
                android:inputType="number"
                tools:text="@string/bloodDiastol" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTextPulse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/layoutTextDiastol"
            app:startIconContentDescription="@string/name_height"
            app:startIconDrawable="@drawable/ic_pulse">

            <EditText
                android:id="@+id/editTextPulse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:autofillHints="@string/name_pulse"
                android:hint="@string/name_pulse"
                android:inputType="number"
                tools:text="@string/pulse" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTextSugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/layoutTextPulse"
            app:startIconContentDescription="@string/name_height"
            app:startIconDrawable="@drawable/ic_blood">

            <EditText
                android:id="@+id/editTextBloodSugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:autofillHints="@string/name_bloodSugar"
                android:hint="@string/name_bloodSugar"
                android:inputType="number"
                tools:text="@string/bloodSugar" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--<EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/editTextWeight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/height" />

        <EditText
            android:id="@+id/editTextWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/editTextSystol"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextHeight"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/weight" />

        <EditText
            android:id="@+id/editTextSystol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/editTextDiastol"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextWeight"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/bloodSystol" />

        <EditText
            android:id="@+id/editTextDiastol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/editTextPulse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextSystol"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/bloodDiastol" />

        <EditText
            android:id="@+id/editTextPulse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/editTextBloodSugar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDiastol"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/pulse" />

        <EditText
            android:id="@+id/editTextBloodSugar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPulse"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/bloodSugar" />-->

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/save_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:background="?android:attr/windowBackground"
            android:foregroundGravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/save_button" >

        </com.google.android.material.bottomnavigation.BottomNavigationView>

        <ImageView
            android:id="@+id/imageViewTopBackround"
            android:layout_width="420dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/background" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>