<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="property"
            type="com.healtdiary.app.data.Data" />

        <variable
            name="clickListener"
            type="com.healtdiary.app.ui.data.DataAdapter.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="@{() -> clickListener.onClick(property)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- android:foreground="?android:attr/selectableItemBackground" -->
            <!-- android:onClick="@{() -> clickListener.onClick(property)}" -->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgViewData"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <TextView
                    android:id="@+id/txtViewDatetime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@{property.dateTime}"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@+id/txtViewHeight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/imgViewData"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="@string/dateTime" />

                <TextView
                    android:id="@+id/txtViewHeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@{property.height}"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@+id/txtViewWeight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/imgViewData"
                    app:layout_constraintTop_toBottomOf="@+id/txtViewDatetime"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="@string/height" />

                <TextView
                    android:id="@+id/txtViewWeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@{property.weight}"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@+id/txtViewBloodSystol"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/imgViewData"
                    app:layout_constraintTop_toBottomOf="@+id/txtViewHeight"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="@string/weight" />

                <TextView
                    android:id="@+id/txtViewBloodSystol"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@{property.bloodSystol}"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@+id/txtViewBloodDiastol"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgViewData"
                    app:layout_constraintTop_toBottomOf="@+id/txtViewWeight"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="@string/bloodSystol" />

                <TextView
                    android:id="@+id/txtViewPulse"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@{property.pulse}"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@+id/txtViewBloodSugar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgViewData"
                    app:layout_constraintTop_toBottomOf="@+id/txtViewBloodDiastol"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="@string/pulse" />

                <TextView
                    android:id="@+id/txtViewBloodDiastol"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@{property.bloodDiastol}"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@+id/txtViewPulse"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgViewData"
                    app:layout_constraintTop_toBottomOf="@+id/txtViewBloodSystol"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="@string/bloodDiastol" />

                <TextView
                    android:id="@+id/txtViewBloodSugar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@{property.bloodSugar}"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgViewData"
                    app:layout_constraintTop_toBottomOf="@+id/txtViewPulse"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="@string/bloodSugar" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>